--- a/disclaimer.html
+++ b/disclaimer.html
@@ -691,9 +691,9 @@
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="#">Privacy</a>
-                            <a href="#">Cookie policy</a>
-                            <a href="#">Disclaimer</a>
+                            <a href="privacy.html">Privacy</a>
+                            <a href="policy.html">Cookie policy</a>
+                            <a href="disclaimer.html">Disclaimer</a>
                         </div>
                     </div>
                 </div>
